--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
    <p>See how experienced developers solve problems in real-time. Watching scripted tutorials is great, but understanding how developers think is invaluable.</p>
   </div>
   <div class="right">
-   <p><strong>Try it free 7 days </strong> than $20/mo. thereafter</p>
-   <div class="form">
+   <p class="right-top"><strong>Try it free 7 days </strong> than $20/mo. thereafter</p>
+   <div class="right-bottom">
    <form action="#">
     <input type="text" name="First name" placeholder="First Name">
     <br>
