--- a/index.html
+++ b/index.html
@@ -1,35 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
- <meta charset="UTF-8">
- <meta http-equiv="X-UA-Compatible" content="IE=edge">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Responsive Form</title>
- <link rel="stylesheet" href="style.css">
-</head>
-<body>
- <main>
-  <div class="left">
-   <h1>Learn to code by watching others</h1>
-   <p>See how experienced developers solve problems in real-time. Watching scripted tutorials is great, but understanding how developers think is invaluable.</p>
-  </div>
-  <div class="right">
-   <p class="right-top"><strong>Try it free 7 days </strong> than $20/mo. thereafter</p>
-   <div class="right-bottom">
-   <form action="#">
-    <input type="text" name="First name" placeholder="First Name">
-    <br>
-    <input type="text" name="Last name" placeholder="Last Name">
-    <br>
-    <input type="email" name="email" placeholder="Email Address">
-    <br>
-    <input type="password" name="password" placeholder="Password">
-    <br>
-    <button>CLAIM YOUR FREE TRIAL</button>
-    <p>By clicking the button, you are agreeing to our <strong>Terms and Services</strong></p>
-   </form>
-   </div>
-  </div>
- </main>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Responsive Form</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <main>
+      <div class="left">
+        <h1 style="font-weight: 700;">Learn to code by watching others</h1>
+        <p style="font-weight: 300;">
+          See how experienced developers solve problems in real-time. Watching
+          scripted tutorials is great, but understanding how developers think is
+          invaluable.
+        </p>
+      </div>
+      <div class="right">
+        <p class="right-top">
+          <strong>Try it free 7 days </strong> than $20/mo. thereafter
+        </p>
+        <div class="right-bottom">
+          <form action="#">
+            <input type="text" name="First name" placeholder="First Name" />
+            <input type="text" name="Last name" placeholder="Last Name" />
+            <input type="email" name="email" placeholder="Email Address" />
+            <input type="password" name="password" placeholder="Password" />
+            <button>CLAIM YOUR FREE TRIAL</button>
+            <p style="font-weight: 300;">
+              By clicking the button, you are agreeing to our
+              <strong>Terms and Services</strong>
+            </p>
+          </form>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
